--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "bootstrap": "^3.3.6",
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
